--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
 
         <form action="/upload" method="post" enctype="multipart/form-data">
             <div class="mb-3">
-                <label for="fileInput" class="form-label">Choose MIPS Memory Dump File</label>
+                <label for="fileInput" class="form-label">Choose MIPS Memory Dump File (make sure file is .txt)</label>
                 <input type="file" class="form-control" id="fileInput" name="file" required>
             </div>
             <button type="submit" class="btn btn-primary">Upload and Format</button>
